--- a/src/App.scss
+++ b/src/App.scss
@@ -1,33 +1,27 @@
 .App {
-  text-align: center;
-  
-  &-logo {
-    animation: App-logo-spin infinite 20s linear;
-    height: 40vmin;
-    pointer-events: none;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  &-logo {
+    margin: 8px 20px
   }
-  to {
-    transform: rotate(360deg);
+
+  &-container {
+    display: flex;
+    flex-grow: 1;
+  }
+
+  &-menu {
+    width: 200px;
+    background: #252834;
+  }
+  
+  &-header {
+    height: 56px;
+    display: flex;
+  }
+
+  &-link {
+    color: #61dafb;
   }
 }
