--- a/src/components/menu/Menu.scss
+++ b/src/components/menu/Menu.scss
@@ -14,5 +14,13 @@
         letter-spacing: 0.3px;
         opacity: 0.7;
         cursor: pointer;
+        display: block;
+        text-decoration: none;
+
+        &:active, 
+        &:focus, 
+        &:hover {
+            background: #17191E;
+        }
     }
 }
