--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,9 @@
 @import './fonts/index';
 
+* {
+  margin: 0;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
