added active state

--- a/src/components/menu/Menu.scss
+++ b/src/components/menu/Menu.scss
@@ -22,5 +22,10 @@
         &:hover {
             background: #17191E;
         }
+
+        &_active {
+            color: #CFD73C;
+            background: #17191E;
+        }
     }
 }
